--- a/iPad Screens/Base.lproj/Main.storyboard
+++ b/iPad Screens/Base.lproj/Main.storyboard
@@ -999,14 +999,14 @@
                         <color key="sectionIndexBackgroundColor" red="0.95294117649999999" green="0.98039215690000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="alertsCell" id="i05-Wg-vOB" customClass="AlertsTableViewCell" customModule="iPad_Screens" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="420" height="43.5"/>
+                                <rect key="frame" x="0.0" y="50" width="420" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="i05-Wg-vOB" id="Ng5-rG-Ktr">
-                                    <rect key="frame" x="100" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="100" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert TItle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBR-kA-rYz">
-                                            <rect key="frame" x="15" y="0.0" width="390" height="30"/>
+                                            <rect key="frame" x="15" y="0.0" width="390" height="30.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -1015,6 +1015,7 @@
                                     <constraints>
                                         <constraint firstItem="gBR-kA-rYz" firstAttribute="leading" secondItem="Ng5-rG-Ktr" secondAttribute="leading" constant="15" id="2qf-Nc-WAI"/>
                                         <constraint firstItem="gBR-kA-rYz" firstAttribute="top" secondItem="Ng5-rG-Ktr" secondAttribute="top" id="9ak-m5-9eA"/>
+                                        <constraint firstAttribute="bottom" secondItem="gBR-kA-rYz" secondAttribute="bottom" constant="13.5" id="f5e-Km-eNp"/>
                                         <constraint firstAttribute="trailing" secondItem="gBR-kA-rYz" secondAttribute="trailing" constant="15" id="lRB-Wf-gEn"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -1166,7 +1167,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
